Git Tests/force-app/main/default/default/objects/Contract/fields/CodigoCliente__c.field-meta.xml
<CustomField>
    <fullName>CodigoCliente__c</fullName>
    <formula>Account.CodigoCliente__c</formula>
    <label>Código do cliente</label>
    <type>Text</type>
</CustomField>