Git Tests/force-app/main/default/default/objects/Contract/fields/CodigoElfaTOTVS__c.field-meta.xml
<CustomField>
    <fullName>CodigoElfaTOTVS__c</fullName>
    <externalId>true</externalId>
    <label>Código Elfa</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>