Git Tests/force-app/main/default/default/objects/Contract/fields/CodigoLoja__c.field-meta.xml
<CustomField>
    <fullName>CodigoLoja__c</fullName>
    <formula>Account.CodigoCliente__c + &apos;/&apos; + Account.LojaCliente__c</formula>
    <label>Código/Loja</label>
    <type>Text</type>
</CustomField>