Git Tests/force-app/main/default/default/objects/Contract/fields/CodigoTOTVS__c.field-meta.xml
<CustomField>
    <fullName>CodigoTOTVS__c</fullName>
    <externalId>true</externalId>
    <label>Código do TOTVS</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>