Git Tests/force-app/main/default/default/objects/Contract/fields/Fornecedor__c.field-meta.xml
<CustomField>
    <fullName>Fornecedor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fornecedor</label>
    <referenceTo>Fornecedor__c</referenceTo>
    <relationshipLabel>Contratos</relationshipLabel>
    <relationshipName>Contratos</relationshipName>
    <type>Lookup</type>
</CustomField>