Git Tests/force-app/main/default/default/objects/Contract/fields/isApprovalProcess__c.field-meta.xml
<CustomField>
    <fullName>isApprovalProcess__c</fullName>
    <defaultValue>false</defaultValue>
    <label>É processo de aprovação?</label>
    <type>Checkbox</type>
</CustomField>