Git Tests/force-app/main/default/default/objects/Contract/fields/LojaCliente__c.field-meta.xml
<CustomField>
    <fullName>LojaCliente__c</fullName>
    <formula>Account.LojaCliente__c</formula>
    <label>Loja do cliente</label>
    <type>Text</type>
</CustomField>