Git Tests/force-app/main/default/default/objects/Contract/fields/MensagemIntegracao__c.field-meta.xml
<CustomField>
    <fullName>MensagemIntegracao__c</fullName>
    <label>Mensagem da integração</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>