Git Tests/force-app/main/default/default/objects/Contract/fields/QuantidadeItens__c.field-meta.xml
<CustomField>
    <fullName>QuantidadeItens__c</fullName>
    <label>Quantidade de itens</label>
    <summaryForeignKey>ItemContrato__c.NumeroContrato__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>