Git Tests/force-app/main/default/default/objects/Contract/fields/RetornoIntegracao__c.field-meta.xml
<CustomField>
    <fullName>RetornoIntegracao__c</fullName>
    <label>Retorno Integração</label>
    <length>255</length>
    <type>Text</type>
</CustomField>