Git Tests/force-app/main/default/default/objects/Contract/fields/TipoRegra__c.field-meta.xml
<CustomField>
    <fullName>TipoRegra__c</fullName>
    <label>Tipo da regra</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
                <label>Acordo comercial</label>
            </value>
            <value>
                <fullName>O</fullName>
                <label>Operação logística (OL)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>