Git Tests/force-app/main/default/default/objects/Contract/recordTypes/Contrato.recordType-meta.xml
<RecordType>
    <fullName>Contrato</fullName>
    <active>true</active>
    <description>Tipo de registro para os contratos de operação logística, acordo comercial e preço fixo.</description>
    <label>Contrato</label>
</RecordType>