Git Tests/force-app/main/default/default/objects/Contract/validationRules/Contrato_Aprovado.validationRule-meta.xml
<ValidationRule>
    <fullName>Contrato_Aprovado</fullName>
    <active>true</active>
    <description>Regra de validação para não permitir editar campos se o status do contrato estiver como Aprovado.</description>
    <errorConditionFormula>AND(
ISPICKVAL(Status, &apos;Aprovado&apos;),

OR(
ISCHANGED(AccountId),
ISCHANGED(TipoRegra__c),
ISCHANGED(MensagemIntegracao__c)
))</errorConditionFormula>
    <errorMessage>Não é permitido editar campos se o contrato já estiver aprovado.</errorMessage>
</ValidationRule>