Git Tests/force-app/main/default/default/objects/Contract/validationRules/Contrato_BloquearCriacaoPrecoFixo.validationRule-meta.xml
<ValidationRule>
    <fullName>Contrato_BloquearCriacaoPrecoFixo</fullName>
    <active>true</active>
    <description>Regra de validação para não permitir a criação de contratos de preço fixo dentro do Salesforce por usuário comercial.</description>
    <errorConditionFormula>AND(
				ISPICKVAL(TipoRegra__c, &apos;Preço Fixo&apos;),
				ISBLANK(CreatedDate),
				$Profile.Name != &apos;Administrador do sistema&apos;
)</errorConditionFormula>
    <errorMessage>Não é permitido criar contrato de preço fixo.</errorMessage>
</ValidationRule>