Git Tests/force-app/main/default/default/objects/Contract/validationRules/Contrato_BloquearEdicaoTipoRegra.validationRule-meta.xml
<ValidationRule>
    <fullName>Contrato_BloquearEdicaoTipoRegra</fullName>
    <active>true</active>
    <description>Regra de validação para bloquear a edição do campo Tipo da Regra.</description>
    <errorConditionFormula>AND(
				ISCHANGED(TipoRegra__c), 
				$Profile.Name != &quot;Administrador do sistema&quot;
)</errorConditionFormula>
    <errorDisplayField>TipoRegra__c</errorDisplayField>
    <errorMessage>Não é permitido editar este campo.</errorMessage>
</ValidationRule>